--- a/dashapp/templates/text.html
+++ b/dashapp/templates/text.html
@@ -1,7 +1,5 @@
-<div class="control-group">
-  <label class="control-label" for="<%= name %>">Text input</label>
-  <div class="controls">
-    <input type="text" class="input" id="<%= name %>">
-    <p class="help-block"><%= help %></p>
-  </div>
+<label class="control-label" for="<%= name %>"><%= label || name %></label>
+<div class="controls">
+  <input type="text" class="input" id="<%= name %>">
+  <p class="help-block"><%= help %></p>
 </div>
