--- a/dashapp/templates/checkbox.html
+++ b/dashapp/templates/checkbox.html
@@ -1,6 +1,6 @@
 <label class="control-label" for="<%= name %>"><%= label || name %></label>
 <div class="controls">
-  <% _.each(options, function(option){ %>
+  <% _.each(options.toJSON(), function(option){ %>
     <label class="checkbox">
       <input type="checkbox" name="<%= name %>" value="<%= option.value %>">
       <%= option.label %>
