--- a/dashapp/templates/select.html
+++ b/dashapp/templates/select.html
@@ -1,7 +1,7 @@
 <label class="control-label" for="<%= name %>"><%= label || name %></label>
 <div class="controls">
   <select name="<%= name %>">
-    <% _.each(options, function(option){ %>
+    <% _.each(options.toJSON(), function(option){ %>
       <option value="<%= option.value %>"><%= option.label %></option>
     <% }); %>
   </select>
