Final early building commit.

--- a/dashapp/templates/text.html
+++ b/dashapp/templates/text.html
@@ -1,5 +1,5 @@
 <label class="control-label" for="<%= name %>"><%= label || name %></label>
 <div class="controls">
-  <input type="text" class="input" id="<%= name %>">
+  <input type="text" class="input" name="<%= name %>">
   <p class="help-block"><%= help %></p>
 </div>
