--- a/dashapp/templates/fieldseteditbuttons.html
+++ b/dashapp/templates/fieldseteditbuttons.html
@@ -1,2 +1,3 @@
 <button class="btn btn-small rename-fieldset" title="Rename Fieldset"><i class="icon-edit"></i></button>
 <button class="btn btn-small add-fieldFieldset" title="Add Field"><i class="icon-plus"></i></button>
+<button class="btn btn-small btn-danger remove-fieldset" title="Remove Fieldset"><i class="icon-minus"></i></button>
