--- a/dashapp/templates/formeditbuttons.html
+++ b/dashapp/templates/formeditbuttons.html
@@ -1,3 +1,4 @@
+<button class="btn btn-danger remove-form" title="Remove Form"><i class="icon-minus"></i></button>
 <button class="btn rename-form" title="Rename Form"><i class="icon-edit"></i></button>
 <button class="btn add-fieldForm" title="Add Field"><i class="icon-plus"></i></button>
 <button class="btn add-fieldSet" title="Add Fieldset">
