Ironed out a few bugs

--- a/dashapp/templates/editbuttons.html
+++ b/dashapp/templates/editbuttons.html
@@ -1,4 +1,4 @@
-<div class="pull-right">
+<div class="pull-right hide edit-buttons">
   <button class="btn btn-mini edit-field"><i class="icon-pencil"></i></button>
   <button class="btn btn-mini btn-success add-field"><i class="icon-plus"></i></button>
   <button class="btn btn-mini btn-danger remove-field"><i class="icon-minus"></i></button>
